[gd_scene load_steps=32 format=3 uid="uid://cutwa6uptaxi5"]

[ext_resource type="Texture2D" uid="uid://c3k3w13gv6d5g" path="res://src/player/sprite.png" id="1"]
[ext_resource type="Script" path="res://src/player/Player.gd" id="2"]
[ext_resource type="Resource" uid="uid://c0xotwapnvy48" path="res://src/player/resources/HunterPlayer.tres" id="2_g438s"]
[ext_resource type="Shader" path="res://src/player/Hit.gdshader" id="2_pbxs3"]
[ext_resource type="Script" path="res://addons/input/PlayerInput.gd" id="3"]
[ext_resource type="Resource" uid="uid://cdxm0u21vxok2" path="res://src/skills/bow/BowLV1.tres" id="3_d5f18"]
[ext_resource type="Script" path="res://src/shared/rpg/PickupMagnet.gd" id="4"]
[ext_resource type="Script" path="res://addons/StateMachine/Move2D.gd" id="7"]
[ext_resource type="Script" path="res://src/shared/rpg/HurtBox2D.gd" id="8"]
[ext_resource type="Script" path="res://addons/StateMachine/Knockback2D.gd" id="9"]
[ext_resource type="Script" path="res://addons/StateMachine/StateMachine.gd" id="10"]
[ext_resource type="Script" path="res://src/player/PickupArea.gd" id="11"]
[ext_resource type="PackedScene" uid="uid://c2j6q8cyljml7" path="res://src/player/PlayerStats.tscn" id="13"]
[ext_resource type="AudioStream" uid="uid://b6lsk3lt5ltwr" path="res://src/player/SFX_collect&bonus1.wav" id="15"]
[ext_resource type="AudioStream" uid="uid://d1uwr3ixrkb72" path="res://src/player/SFX_hit&damage8.wav" id="16"]
[ext_resource type="AudioStream" uid="uid://1ryktaluqmkp" path="res://src/player/SFX_powerUp7.wav" id="18"]
[ext_resource type="Script" path="res://src/shared/rpg/AimDirection.gd" id="19"]
[ext_resource type="Texture2D" uid="uid://dp8evii6gtoxf" path="res://src/player/crosshair.png" id="20"]
[ext_resource type="PackedScene" uid="uid://8ht4hoky2uf3" path="res://src/player/heal_particles.tscn" id="20_axojp"]
[ext_resource type="Script" path="res://src/shared/gui/ValueBar.gd" id="22_3xeme"]

[sub_resource type="Animation" id="1"]
resource_name = "Hit"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [8]
}

[sub_resource type="Animation" id="2"]
resource_name = "Idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="3"]
resource_name = "Run"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8vnvk"]
_data = {
"Hit": SubResource("1"),
"Idle": SubResource("2"),
"Run": SubResource("3")
}

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(13.3731, 5.681)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5n43v"]
shader = ExtResource("2_pbxs3")
shader_parameter/amount = 0.0

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(12.6422, 18.2859)

[sub_resource type="CircleShape2D" id="5"]
radius = 14.2087

[sub_resource type="CircleShape2D" id="6"]
radius = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x23uv"]
bg_color = Color(0.576471, 0.152941, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fwjg"]
bg_color = Color(0.223529, 0.705882, 0.309804, 1)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("stats") groups=["Player"]]
collision_layer = 2
script = ExtResource("2")
res = ExtResource("2_g438s")
stats = NodePath("PlayerStats")
initial_skill = ExtResource("3_d5f18")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8vnvk")
}

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource("7")

[node name="Sprite" type="Sprite2D" parent="Body"]
material = SubResource("ShaderMaterial_5n43v")
texture = ExtResource("1")
offset = Vector2(0, -11)
hframes = 9
frame = 8

[node name="PlayerStats" parent="." instance=ExtResource("13")]

[node name="Experience" parent="PlayerStats" index="0"]
allow_overflow = true
max_value = 50.0

[node name="GunPointRoot" type="Node2D" parent="."]
position = Vector2(0, -5.05109)

[node name="GunPoint" type="Marker2D" parent="GunPointRoot"]
position = Vector2(20, 0)

[node name="Sprite" type="Sprite2D" parent="GunPointRoot/GunPoint"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("20")

[node name="Hand" type="Node2D" parent="GunPointRoot"]
position = Vector2(6, 0)

[node name="HurtBox" type="Area2D" parent="."]
visible = false
position = Vector2(0, -6.24334)
collision_layer = 4
collision_mask = 0
script = ExtResource("8")
invincibility_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("4")

[node name="HitSound" type="AudioStreamPlayer" parent="HurtBox"]
stream = ExtResource("16")
bus = &"SFX"

[node name="PickupArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -5.35467)
collision_layer = 0
collision_mask = 32
script = ExtResource("11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("5")

[node name="PickupSound" type="AudioStreamPlayer" parent="PickupArea"]
stream = ExtResource("15")
volume_db = -10.0
bus = &"SFX"

[node name="PickupMagnet" type="Area2D" parent="."]
visible = false
position = Vector2(0, -5.19131)
collision_layer = 0
collision_mask = 32
script = ExtResource("4")
speed = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupMagnet"]
shape = SubResource("6")

[node name="AimDirection" type="Node" parent="."]
script = ExtResource("19")
input_path = NodePath("../PlayerInput")

[node name="PlayerInput" type="Node" parent="."]
process_mode = 3
script = ExtResource("3")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("10")
initial_state = NodePath("Move2D")

[node name="Knockback2D" type="Node" parent="StateMachine"]
script = ExtResource("9")

[node name="Move2D" type="Node" parent="StateMachine"]
script = ExtResource("7")
speed = 100
acceleration = 1200
friction = 1200
kinematic_body_path = NodePath("../..")
body_path = NodePath("../../Body")

[node name="HealParticles" parent="." instance=ExtResource("20_axojp")]

[node name="LevelUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18")
volume_db = -5.0
bus = &"SFX"

[node name="HpBar" type="ProgressBar" parent="."]
offset_left = -12.0
offset_top = -25.0
offset_right = 11.0
offset_bottom = -22.0
theme_override_styles/background = SubResource("StyleBoxFlat_x23uv")
theme_override_styles/fill = SubResource("StyleBoxFlat_3fwjg")
value = 50.0
show_percentage = false
script = ExtResource("22_3xeme")

[connection signal="level_up" from="PlayerStats" to="." method="_on_player_stats_level_up"]
[connection signal="zero_value" from="PlayerStats/Health" to="." method="_on_Health_zero_value"]
[connection signal="damaged" from="HurtBox" to="." method="_on_hurt_box_damaged"]
[connection signal="area_entered" from="PickupArea" to="." method="_on_PickupArea_area_entered"]
[connection signal="area_entered" from="PickupMagnet" to="PickupMagnet" method="_on_PickupMagnet_area_entered"]
[connection signal="area_exited" from="PickupMagnet" to="PickupMagnet" method="_on_PickupMagnet_area_exited"]
[connection signal="knockback_finished" from="StateMachine/Knockback2D" to="." method="_on_Knockback2D_knockback_finished"]
[connection signal="knockback_start" from="StateMachine/Knockback2D" to="AnimationPlayer" method="play" binds= ["Hit"]]
[connection signal="idle" from="StateMachine/Move2D" to="AnimationPlayer" method="play" binds= ["Idle"]]
[connection signal="run" from="StateMachine/Move2D" to="AnimationPlayer" method="play" binds= ["Run"]]

[editable path="PlayerStats"]
